--- a/English.lproj/FilesView.xib
+++ b/English.lproj/FilesView.xib
@@ -1214,11 +1214,11 @@
                         </object>
                       </object>
                     </object>
-                    <string key="NSFrameSize">{108, 22}</string>
+                    <string key="NSFrameSize">{107, 22}</string>
                     <reference key="NSSuperview" ref="417462929"/>
                   </object>
                 </object>
-                <string key="NSFrame">{{60, 1}, {108, 22}}</string>
+                <string key="NSFrame">{{60, 1}, {107, 22}}</string>
                 <reference key="NSSuperview" ref="310906602"/>
                 <string key="NSOffsets">{0, 0}</string>
                 <object class="NSTextFieldCell" key="NSTitleCell">
@@ -1905,6 +1905,30 @@
             <reference key="destination" ref="60214963"/>
           </object>
           <int key="connectionID">241</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">actionSwitchViewToFilesBrowserView:</string>
+            <reference key="source" ref="1003"/>
+            <reference key="destination" ref="593147930"/>
+          </object>
+          <int key="connectionID">242</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">actionSwitchViewToFilesOutlineView:</string>
+            <reference key="source" ref="1003"/>
+            <reference key="destination" ref="589549321"/>
+          </object>
+          <int key="connectionID">243</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">actionSwitchViewToFilesTableView:</string>
+            <reference key="source" ref="1003"/>
+            <reference key="destination" ref="60214963"/>
+          </object>
+          <int key="connectionID">244</int>
         </object>
       </object>
       <object class="IBMutableOrderedSet" key="objectRecords">
@@ -2918,7 +2942,7 @@
         </object>
       </object>
       <nil key="sourceID"/>
-      <int key="maxID">241</int>
+      <int key="maxID">244</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <object class="NSMutableArray" key="referencedPartialClassDescriptions">
