--- a/English.lproj/FilesViewBrowser.xib
+++ b/English.lproj/FilesViewBrowser.xib
@@ -12,6 +12,7 @@
     </object>
     <object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
       <bool key="EncodedWithXMLCoder">YES</bool>
+      <integer value="45"/>
     </object>
     <object class="NSArray" key="IBDocument.PluginDependencies">
       <bool key="EncodedWithXMLCoder">YES</bool>
@@ -37,29 +38,80 @@
       <object class="NSCustomObject" id="1004">
         <string key="NSClassName">NSApplication</string>
       </object>
-      <object class="NSBrowser" id="123509927">
-        <nil key="NSNextResponder"/>
-        <int key="NSvFlags">4370</int>
-        <string key="NSFrameSize">{714, 608}</string>
-        <bool key="NSEnabled">YES</bool>
-        <object class="NSBrowserCell" key="NSCellPrototype">
-          <int key="NSCellFlags">67239488</int>
-          <int key="NSCellFlags2">2048</int>
-          <string type="base64-UTF8" key="NSContents">IA</string>
-          <object class="NSFont" key="NSSupport">
-            <string key="NSName">LucidaGrande</string>
-            <double key="NSSize">12</double>
-            <int key="NSfFlags">16</int>
+      <object class="NSBox" id="178749795">
+        <reference key="NSNextResponder"/>
+        <int key="NSvFlags">18</int>
+        <object class="NSMutableArray" key="NSSubviews">
+          <bool key="EncodedWithXMLCoder">YES</bool>
+          <object class="NSView" id="968860812">
+            <reference key="NSNextResponder" ref="178749795"/>
+            <int key="NSvFlags">274</int>
+            <object class="NSMutableArray" key="NSSubviews">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <object class="NSBrowser" id="123509927">
+                <reference key="NSNextResponder" ref="968860812"/>
+                <int key="NSvFlags">4370</int>
+                <string key="NSFrame">{{-1, -1}, {714, 608}}</string>
+                <reference key="NSSuperview" ref="968860812"/>
+                <bool key="NSEnabled">YES</bool>
+                <object class="NSBrowserCell" key="NSCellPrototype">
+                  <int key="NSCellFlags">67239488</int>
+                  <int key="NSCellFlags2">2048</int>
+                  <string type="base64-UTF8" key="NSContents">IA</string>
+                  <object class="NSFont" key="NSSupport">
+                    <string key="NSName">LucidaGrande</string>
+                    <double key="NSSize">12</double>
+                    <int key="NSfFlags">16</int>
+                  </object>
+                </object>
+                <string key="NSPathSeparator">/</string>
+                <int key="NSMinColumnWidth">50</int>
+                <int key="NSNumberOfVisibleColumns">3</int>
+                <int key="NSColumnResizingType">2</int>
+                <double key="NSPreferedColumnWidth">267</double>
+                <bool key="NSAllowsTypeSelect">YES</bool>
+                <int key="NSBrFlags">-939442176</int>
+                <double key="NSBrowserRowHeight">17</double>
+              </object>
+            </object>
+            <string key="NSFrameSize">{712, 606}</string>
+            <reference key="NSSuperview" ref="178749795"/>
+            <string key="NSReuseIdentifierKey">_NS:21</string>
           </object>
         </object>
-        <string key="NSPathSeparator">/</string>
-        <int key="NSMinColumnWidth">50</int>
-        <int key="NSNumberOfVisibleColumns">1</int>
-        <int key="NSColumnResizingType">2</int>
-        <double key="NSPreferedColumnWidth">267</double>
-        <bool key="NSAllowsTypeSelect">YES</bool>
-        <int key="NSBrFlags">-939442176</int>
-        <double key="NSBrowserRowHeight">17</double>
+        <string key="NSFrameSize">{712, 606}</string>
+        <reference key="NSSuperview"/>
+        <string key="NSReuseIdentifierKey">_NS:18</string>
+        <string key="NSOffsets">{0, 0}</string>
+        <object class="NSTextFieldCell" key="NSTitleCell">
+          <int key="NSCellFlags">67239424</int>
+          <int key="NSCellFlags2">0</int>
+          <string key="NSContents">Box</string>
+          <object class="NSFont" key="NSSupport">
+            <string key="NSName">LucidaGrande</string>
+            <double key="NSSize">11</double>
+            <int key="NSfFlags">3088</int>
+          </object>
+          <object class="NSColor" key="NSBackgroundColor">
+            <int key="NSColorSpace">6</int>
+            <string key="NSCatalogName">System</string>
+            <string key="NSColorName">textBackgroundColor</string>
+            <object class="NSColor" key="NSColor">
+              <int key="NSColorSpace">3</int>
+              <bytes key="NSWhite">MQA</bytes>
+            </object>
+          </object>
+          <object class="NSColor" key="NSTextColor">
+            <int key="NSColorSpace">3</int>
+            <bytes key="NSWhite">MCAwLjgwMDAwMDAxMTkAA</bytes>
+          </object>
+        </object>
+        <reference key="NSContentView" ref="968860812"/>
+        <int key="NSBorderType">0</int>
+        <int key="NSBoxType">4</int>
+        <int key="NSTitlePosition">2</int>
+        <bool key="NSTransparent">NO</bool>
+        <real value="0.0" key="NSBorderWidth2"/>
       </object>
     </object>
     <object class="IBObjectContainer" key="IBDocument.Objects">
@@ -102,9 +154,19 @@
             <string key="objectName">Application</string>
           </object>
           <object class="IBObjectRecord">
+            <int key="objectID">45</int>
+            <reference key="object" ref="178749795"/>
+            <object class="NSMutableArray" key="children">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <reference ref="123509927"/>
+            </object>
+            <reference key="parent" ref="0"/>
+            <string key="objectName">ClipPixelBoarderBox</string>
+          </object>
+          <object class="IBObjectRecord">
             <int key="objectID">1</int>
             <reference key="object" ref="123509927"/>
-            <reference key="parent" ref="0"/>
+            <reference key="parent" ref="178749795"/>
           </object>
         </object>
       </object>
@@ -115,11 +177,17 @@
           <string>1.CustomClassName</string>
           <string>1.IBEditorWindowLastContentRect</string>
           <string>1.IBPluginDependency</string>
+          <string>1.IBViewBoundsToFrameTransform</string>
+          <string>45.IBEditorWindowLastContentRect</string>
+          <string>45.IBPluginDependency</string>
         </object>
         <object class="NSMutableArray" key="dict.values">
           <bool key="EncodedWithXMLCoder">YES</bool>
           <string>FSViewerBrowser</string>
           <string>{{42, 480}, {714, 608}}</string>
+          <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+          <object class="NSAffineTransform"/>
+          <string>{{0, 539}, {712, 606}}</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
         </object>
       </object>
@@ -139,7 +207,7 @@
         </object>
       </object>
       <nil key="sourceID"/>
-      <int key="maxID">44</int>
+      <int key="maxID">45</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -160,7 +228,15 @@
           </object>
         </object>
         <object class="IBPartialClassDescription">
+          <string key="className">NSBox</string>
+          <reference key="sourceIdentifier" ref="789527579"/>
+        </object>
+        <object class="IBPartialClassDescription">
           <string key="className">NSObject</string>
+          <reference key="sourceIdentifier" ref="789527579"/>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSResponder</string>
           <reference key="sourceIdentifier" ref="789527579"/>
         </object>
         <object class="IBPartialClassDescription">
@@ -218,6 +294,14 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
             <string key="minorKey">BWToolkitFramework.framework/Headers/NSApplication+BWAdditions.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSBox</string>
+          <string key="superclassName">NSView</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">AppKit.framework/Headers/NSBox.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
