--- a/English.lproj/MyDocument.xib
+++ b/English.lproj/MyDocument.xib
@@ -22,7 +22,7 @@
     <object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
       <bool key="EncodedWithXMLCoder">YES</bool>
       <integer value="100274"/>
-      <integer value="100021"/>
+      <integer value="100316"/>
     </object>
     <object class="NSArray" key="IBDocument.PluginDependencies">
       <bool key="EncodedWithXMLCoder">YES</bool>
@@ -410,6 +410,7 @@
                           <string key="NSResourceName">tb-browserPane</string>
                         </object>
                         <string key="NSSegmentItemLabel"/>
+                        <string key="NSSegmentItemTooltip">Files View</string>
                         <int key="NSSegmentItemImageScaling">2</int>
                       </object>
                       <object class="NSSegmentItem">
@@ -419,6 +420,7 @@
                           <string key="NSResourceName">tb-HistoryViewPane</string>
                         </object>
                         <string key="NSSegmentItemLabel"/>
+                        <string key="NSSegmentItemTooltip">History View</string>
                         <int key="NSSegmentItemTag">1</int>
                         <int key="NSSegmentItemImageScaling">2</int>
                       </object>
@@ -428,10 +430,12 @@
                           <string key="NSClassName">NSImage</string>
                           <string key="NSResourceName">tb-DiffInspectorPane</string>
                         </object>
+                        <string key="NSSegmentItemTooltip">Differences View</string>
                         <int key="NSSegmentItemTag">2</int>
                         <int key="NSSegmentItemImageScaling">2</int>
                       </object>
                     </object>
+                    <int key="NSSelectedSegment">2</int>
                     <int key="NSSegmentStyle">2</int>
                   </object>
                 </object>
@@ -3498,7 +3502,7 @@
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-          <integer value="0"/>
+          <integer value="2"/>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3924,11 +3928,13 @@
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
               <string>contextualMenuForFSViewerPane</string>
+              <string>detailedDiffWebView</string>
               <string>parentController</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
               <string>NSMenu</string>
+              <string>WebView</string>
               <string>id</string>
             </object>
           </object>
@@ -3937,6 +3943,7 @@
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
               <string>contextualMenuForFSViewerPane</string>
+              <string>detailedDiffWebView</string>
               <string>parentController</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
@@ -3944,6 +3951,10 @@
               <object class="IBToOneOutletInfo">
                 <string key="name">contextualMenuForFSViewerPane</string>
                 <string key="candidateClassName">NSMenu</string>
+              </object>
+              <object class="IBToOneOutletInfo">
+                <string key="name">detailedDiffWebView</string>
+                <string key="candidateClassName">WebView</string>
               </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">parentController</string>
@@ -4161,7 +4172,7 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>accordionView</string>
+              <string>concertinaView</string>
               <string>detailedEntryTextView</string>
               <string>detailsView</string>
               <string>logTableView</string>
@@ -4171,7 +4182,7 @@
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>JHAccordionView</string>
+              <string>JHConcertinaView</string>
               <string>LogTableTextView</string>
               <string>NSView</string>
               <string>LogTableView</string>
@@ -4184,7 +4195,7 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>accordionView</string>
+              <string>concertinaView</string>
               <string>detailedEntryTextView</string>
               <string>detailsView</string>
               <string>logTableView</string>
@@ -4195,8 +4206,8 @@
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
               <object class="IBToOneOutletInfo">
-                <string key="name">accordionView</string>
-                <string key="candidateClassName">JHAccordionView</string>
+                <string key="name">concertinaView</string>
+                <string key="candidateClassName">JHConcertinaView</string>
               </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">detailedEntryTextView</string>
@@ -4246,88 +4257,86 @@
           <reference key="sourceIdentifier" ref="238990789"/>
         </object>
         <object class="IBPartialClassDescription">
-          <string key="className">JHAccordionSubView</string>
-          <string key="superclassName">NSView</string>
-          <object class="NSMutableDictionary" key="outlets">
-            <bool key="EncodedWithXMLCoder">YES</bool>
-            <object class="NSArray" key="dict.sortedKeys">
-              <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>buttonsContainerInDivider</string>
-              <string>divider</string>
-            </object>
-            <object class="NSMutableArray" key="dict.values">
-              <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>NSView</string>
-              <string>NSView</string>
-            </object>
-          </object>
-          <object class="NSMutableDictionary" key="toOneOutletInfosByName">
-            <bool key="EncodedWithXMLCoder">YES</bool>
-            <object class="NSArray" key="dict.sortedKeys">
-              <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>buttonsContainerInDivider</string>
-              <string>divider</string>
-            </object>
-            <object class="NSMutableArray" key="dict.values">
-              <bool key="EncodedWithXMLCoder">YES</bool>
-              <object class="IBToOneOutletInfo">
-                <string key="name">buttonsContainerInDivider</string>
-                <string key="candidateClassName">NSView</string>
-              </object>
-              <object class="IBToOneOutletInfo">
-                <string key="name">divider</string>
-                <string key="candidateClassName">NSView</string>
-              </object>
-            </object>
-          </object>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier" id="1066019894">
-            <string key="majorKey">IBProjectSource</string>
-            <string key="minorKey">Classes/HistoryView/JHAccordionView.h</string>
-          </object>
-        </object>
-        <object class="IBPartialClassDescription">
-          <string key="className">JHAccordionView</string>
+          <string key="className">JHConcertinaView</string>
           <string key="superclassName">NSSplitView</string>
           <object class="NSMutableDictionary" key="outlets">
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>pane1Box</string>
-              <string>pane2Box</string>
-              <string>pane3Box</string>
+              <string>contentView1</string>
+              <string>contentView2</string>
+              <string>contentView3</string>
+              <string>contentView4</string>
+              <string>dividerView1</string>
+              <string>dividerView2</string>
+              <string>dividerView3</string>
+              <string>dividerView4</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>JHAccordionSubView</string>
-              <string>JHAccordionSubView</string>
-              <string>JHAccordionSubView</string>
+              <string>NSView</string>
+              <string>NSView</string>
+              <string>NSView</string>
+              <string>NSView</string>
+              <string>NSView</string>
+              <string>NSView</string>
+              <string>NSView</string>
+              <string>NSView</string>
             </object>
           </object>
           <object class="NSMutableDictionary" key="toOneOutletInfosByName">
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>pane1Box</string>
-              <string>pane2Box</string>
-              <string>pane3Box</string>
+              <string>contentView1</string>
+              <string>contentView2</string>
+              <string>contentView3</string>
+              <string>contentView4</string>
+              <string>dividerView1</string>
+              <string>dividerView2</string>
+              <string>dividerView3</string>
+              <string>dividerView4</string>
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
               <object class="IBToOneOutletInfo">
-                <string key="name">pane1Box</string>
-                <string key="candidateClassName">JHAccordionSubView</string>
+                <string key="name">contentView1</string>
+                <string key="candidateClassName">NSView</string>
               </object>
               <object class="IBToOneOutletInfo">
-                <string key="name">pane2Box</string>
-                <string key="candidateClassName">JHAccordionSubView</string>
+                <string key="name">contentView2</string>
+                <string key="candidateClassName">NSView</string>
               </object>
               <object class="IBToOneOutletInfo">
-                <string key="name">pane3Box</string>
-                <string key="candidateClassName">JHAccordionSubView</string>
+                <string key="name">contentView3</string>
+                <string key="candidateClassName">NSView</string>
+              </object>
+              <object class="IBToOneOutletInfo">
+                <string key="name">contentView4</string>
+                <string key="candidateClassName">NSView</string>
+              </object>
+              <object class="IBToOneOutletInfo">
+                <string key="name">dividerView1</string>
+                <string key="candidateClassName">NSView</string>
+              </object>
+              <object class="IBToOneOutletInfo">
+                <string key="name">dividerView2</string>
+                <string key="candidateClassName">NSView</string>
+              </object>
+              <object class="IBToOneOutletInfo">
+                <string key="name">dividerView3</string>
+                <string key="candidateClassName">NSView</string>
+              </object>
+              <object class="IBToOneOutletInfo">
+                <string key="name">dividerView4</string>
+                <string key="candidateClassName">NSView</string>
               </object>
             </object>
           </object>
-          <reference key="sourceIdentifier" ref="1066019894"/>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/ExternalClasses/JHConcertinaView/JHConcertinaView.h</string>
+          </object>
         </object>
         <object class="IBPartialClassDescription">
           <string key="className">LabelsTableView</string>
@@ -6382,6 +6391,109 @@
             <string key="minorKey">BWToolkitFramework.framework/Headers/NSWindow+BWAdditions.h</string>
           </object>
         </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">WebView</string>
+          <string key="superclassName">NSView</string>
+          <object class="NSMutableDictionary" key="actions">
+            <bool key="EncodedWithXMLCoder">YES</bool>
+            <object class="NSArray" key="dict.sortedKeys">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>goBack:</string>
+              <string>goForward:</string>
+              <string>makeTextLarger:</string>
+              <string>makeTextSmaller:</string>
+              <string>makeTextStandardSize:</string>
+              <string>reload:</string>
+              <string>reloadFromOrigin:</string>
+              <string>stopLoading:</string>
+              <string>takeStringURLFrom:</string>
+              <string>toggleContinuousSpellChecking:</string>
+              <string>toggleSmartInsertDelete:</string>
+            </object>
+            <object class="NSMutableArray" key="dict.values">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+              <string>id</string>
+            </object>
+          </object>
+          <object class="NSMutableDictionary" key="actionInfosByName">
+            <bool key="EncodedWithXMLCoder">YES</bool>
+            <object class="NSArray" key="dict.sortedKeys">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <string>goBack:</string>
+              <string>goForward:</string>
+              <string>makeTextLarger:</string>
+              <string>makeTextSmaller:</string>
+              <string>makeTextStandardSize:</string>
+              <string>reload:</string>
+              <string>reloadFromOrigin:</string>
+              <string>stopLoading:</string>
+              <string>takeStringURLFrom:</string>
+              <string>toggleContinuousSpellChecking:</string>
+              <string>toggleSmartInsertDelete:</string>
+            </object>
+            <object class="NSMutableArray" key="dict.values">
+              <bool key="EncodedWithXMLCoder">YES</bool>
+              <object class="IBActionInfo">
+                <string key="name">goBack:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">goForward:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">makeTextLarger:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">makeTextSmaller:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">makeTextStandardSize:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">reload:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">reloadFromOrigin:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">stopLoading:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">takeStringURLFrom:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">toggleContinuousSpellChecking:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">toggleSmartInsertDelete:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+            </object>
+          </object>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBFrameworkSource</string>
+            <string key="minorKey">WebKit.framework/Headers/WebView.h</string>
+          </object>
+        </object>
       </object>
     </object>
     <int key="IBDocument.localizationMode">0</int>
@@ -6454,7 +6566,7 @@
         <string>{32, 32}</string>
         <string>{29, 23}</string>
         <string>{15, 14}</string>
-        <string>{15, 14}</string>
+        <string>{15, 13}</string>
         <string>{32, 32}</string>
       </object>
     </object>
