--- a/English.lproj/HistoryView.xib
+++ b/English.lproj/HistoryView.xib
@@ -11,9 +11,10 @@
       <string key="NS.object.0">851</string>
     </object>
     <array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-      <integer value="838"/>
       <integer value="843"/>
+      <integer value="838"/>
       <integer value="850"/>
+      <integer value="1023"/>
     </array>
     <array key="IBDocument.PluginDependencies">
       <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -676,12 +677,12 @@
         <reference key="NSContentView" ref="386087576"/>
       </object>
       <object class="NSCustomView" id="192058997">
-        <nil key="NSNextResponder"/>
+        <reference key="NSNextResponder"/>
         <int key="NSvFlags">274</int>
         <array class="NSMutableArray" key="NSSubviews">
           <object class="NSBox" id="48728709">
             <reference key="NSNextResponder" ref="192058997"/>
-            <int key="NSvFlags">4105</int>
+            <int key="NSvFlags">4113</int>
             <array class="NSMutableArray" key="NSSubviews">
               <object class="NSView" id="902590409">
                 <reference key="NSNextResponder" ref="48728709"/>
@@ -690,7 +691,7 @@
                   <object class="NSButton" id="149597996">
                     <reference key="NSNextResponder" ref="902590409"/>
                     <int key="NSvFlags">265</int>
-                    <string key="NSFrame">{{36, 198}, {87, 18}}</string>
+                    <string key="NSFrame">{{37, 532}, {87, 18}}</string>
                     <reference key="NSSuperview" ref="902590409"/>
                     <bool key="NSEnabled">YES</bool>
                     <object class="NSButtonCell" key="NSCell" id="17485492">
@@ -717,7 +718,7 @@
                   <object class="NSButton" id="358331133">
                     <reference key="NSNextResponder" ref="902590409"/>
                     <int key="NSvFlags">265</int>
-                    <string key="NSFrame">{{21, 175}, {102, 18}}</string>
+                    <string key="NSFrame">{{22, 509}, {102, 18}}</string>
                     <reference key="NSSuperview" ref="902590409"/>
                     <bool key="NSEnabled">YES</bool>
                     <object class="NSButtonCell" key="NSCell" id="911034200">
@@ -739,7 +740,7 @@
                   <object class="NSButton" id="136039522">
                     <reference key="NSNextResponder" ref="902590409"/>
                     <int key="NSvFlags">265</int>
-                    <string key="NSFrame">{{41, 129}, {82, 18}}</string>
+                    <string key="NSFrame">{{42, 463}, {82, 18}}</string>
                     <reference key="NSSuperview" ref="902590409"/>
                     <bool key="NSEnabled">YES</bool>
                     <object class="NSButtonCell" key="NSCell" id="941631319">
@@ -761,7 +762,7 @@
                   <object class="NSButton" id="1032402974">
                     <reference key="NSNextResponder" ref="902590409"/>
                     <int key="NSvFlags">265</int>
-                    <string key="NSFrame">{{75, 221}, {48, 18}}</string>
+                    <string key="NSFrame">{{76, 555}, {48, 18}}</string>
                     <reference key="NSSuperview" ref="902590409"/>
                     <bool key="NSEnabled">YES</bool>
                     <object class="NSButtonCell" key="NSCell" id="205330899">
@@ -783,7 +784,7 @@
                   <object class="NSTextField" id="39086901">
                     <reference key="NSNextResponder" ref="902590409"/>
                     <int key="NSvFlags">265</int>
-                    <string key="NSFrame">{{13, 246}, {82, 14}}</string>
+                    <string key="NSFrame">{{14, 580}, {82, 14}}</string>
                     <reference key="NSSuperview" ref="902590409"/>
                     <bool key="NSEnabled">YES</bool>
                     <object class="NSTextFieldCell" key="NSCell" id="529671851">
@@ -804,7 +805,7 @@
                   <object class="NSButton" id="901296252">
                     <reference key="NSNextResponder" ref="902590409"/>
                     <int key="NSvFlags">265</int>
-                    <string key="NSFrame">{{13, 152}, {110, 18}}</string>
+                    <string key="NSFrame">{{14, 486}, {110, 18}}</string>
                     <reference key="NSSuperview" ref="902590409"/>
                     <bool key="NSEnabled">YES</bool>
                     <object class="NSButtonCell" key="NSCell" id="849870630">
@@ -824,11 +825,11 @@
                     </object>
                   </object>
                 </array>
-                <string key="NSFrameSize">{140, 276}</string>
+                <string key="NSFrameSize">{141, 610}</string>
                 <reference key="NSSuperview" ref="48728709"/>
               </object>
             </array>
-            <string key="NSFrame">{{683, 333}, {140, 276}}</string>
+            <string key="NSFrame">{{682, 0}, {141, 610}}</string>
             <reference key="NSSuperview" ref="192058997"/>
             <string key="NSOffsets">{0, 0}</string>
             <object class="NSTextFieldCell" key="NSTitleCell">
@@ -852,6 +853,10 @@
             <int key="NSBoxType">4</int>
             <int key="NSTitlePosition">0</int>
             <bool key="NSTransparent">NO</bool>
+            <object class="NSColor" key="NSFillColor2">
+              <int key="NSColorSpace">1</int>
+              <bytes key="NSRGB">MC45Mjk0MTE3NjQ3IDAuOTI5NDExNzY0NyAwLjkyOTQxMTc2NDcAA</bytes>
+            </object>
           </object>
           <object class="NSScrollView" id="726205574">
             <reference key="NSNextResponder" ref="192058997"/>
@@ -1065,7 +1070,7 @@
               </object>
               <reference ref="270703659"/>
             </array>
-            <string key="NSFrame">{{0, -2}, {682, 612}}</string>
+            <string key="NSFrame">{{0, -1}, {682, 612}}</string>
             <reference key="NSSuperview" ref="192058997"/>
             <reference key="NSNextKeyView" ref="776908956"/>
             <int key="NSsFlags">133682</int>
@@ -1073,10 +1078,12 @@
             <reference key="NSHScroller" ref="258795551"/>
             <reference key="NSContentView" ref="776908956"/>
             <reference key="NSHeaderClipView" ref="776487323"/>
+            <reference key="NSCornerView" ref="270703659"/>
             <bytes key="NSScrollAmts">QSAAAEEgAABBmAAAQZgAAA</bytes>
           </object>
         </array>
         <string key="NSFrameSize">{823, 610}</string>
+        <reference key="NSSuperview"/>
         <string key="NSReuseIdentifierKey">_NS:1109</string>
         <string key="NSClassName">NSView</string>
       </object>
